# Mr.smARt

./: .gitignore  README.md
apps/analyst-questionnaire-suite-plugin/: .gitignore  README.md
apps/analyst-questionnaire-suite-plugin/.codex-plugin/: plugin.json
apps/analyst-questionnaire-suite-plugin/scripts/: install-claude-skills.sh  install-skills.sh
apps/ar-ai-questionnaire-platform/: .gitignore  Omdia RFI - Tencent Cloud Response (EN+CN).docx  README.md  com.ar.wechat-sync.plist  questionnaire.html  questionnaire_raw.txt
apps/ar-ai-questionnaire-platform/.claude/: launch.json
apps/ar-ai-questionnaire-platform/docs/: platform-handoff.md
apps/ar-ai-questionnaire-platform/extension/: README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
apps/ar-ai-questionnaire-platform/extracted/: [Content_Types].xml
apps/ar-ai-questionnaire-platform/web/: .env.example  .env.local.example  .gaia-ui-kit.json  .gitignore  .npmrc  AGENTS.md  README.md  SETUP.md  index.html  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.api.json  tsconfig.app.json  (+2 more)
apps/ar-portal-home/: next.config.ts  package-lock.json  package.json
apps/ar-questionnaire-assistant/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/wechat-feed-to-markdown/: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
apps/wechat-feed-to-markdown/scripts/: backfill.py  daily_sync.py  feed_to_markdown.py  fetch_camoufox.py  prefix_by_date.py  sort_into_accounts.py  sync.py  wechat_article_to_markdown.py
(+323 files in other folders)
