[project]
name = "wechat-feed-to-markdown"
version = "0.1.0"
description = "Backfill / daily-sync WeChat 公众号 articles from wewe-rss into local Markdown + images."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "camoufox[geoip]>=0.4",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "httpx>=0.25",
]

[project.urls]
"Upstream pipeline" = "https://github.com/jackwener/wechat-article-to-markdown"
"wewe-rss" = "https://github.com/cooderl/wewe-rss"
"Camoufox" = "https://github.com/daijro/camoufox"
